<resources>
    <string name="welcome">Welcome</string>
    <string name="app_name">AR4ECE</string>
    <string name="fsm_button">FSM</string>
    <string name="gate_button">GATE</string>
    <string name="resistor_button">Resistor</string>
    <string name="fsm_reset_button">Reset</string>
    <string name="fsm_next_button">Next</string>
    <string name="fsm_scan_instruction">Please scan the FSM</string>
    <string name="fsm_state_instruction">Please enter the state names \n start from the left</string>
    <string name="fsm_entering_state1">Enter State 1</string>
    <string name="fsm_entering_state2">Enter State 2</string>
    <string name="fsm_entering_state3">Enter State 3</string>
    <string name="fsm_entering_state4">Enter State 4</string>
    <string name="fsm_to_scanner"> Scan </string>>
    <string name="gate_button_x">Change X</string>
    <string name="gate_button_y">Change Y</string>
    <string name="gate_button_reset">Reset</string>
    <string name="gate_Transistor">Circuit</string>
    <string name="gate_Diagram">Diagram</string>
    <string name="gate_TruthTable">Truth table</string>
    <string name="gate_toTransistors">Circuit</string>
    <string name="gate_toTrueTable">Truth Table</string>
    <string name="resistor_capture">Check</string>
    <string name="resistor_noValue">No Resistor</string>
    <string name="resistor_flashLight">FlashLight</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="avatars">
        <item>Person</item>
        <item>Bicycle</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
